# keepalived

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README
genhash/: CMakeLists.txt
keepalived/: CMakeLists.txt
keepalived/core/: CMakeLists.txt
keepalived/etc/init.d/: keepalived.init  keepalived.ubuntu.init
keepalived/etc/keepalived/: keepalived.conf  keepalived.master.conf  keepalived.slave.conf  master.sh  stop.sh
keepalived/vrrp/: CMakeLists.txt
lib/: CMakeLists.txt  config.h
